Выделил заголовок в полужирный шрифт

--- a/МИР.md
+++ b/МИР.md
@@ -1,2 +1,3 @@
-Как захватить мир!
+# **Как захватить мир!**
+
 Итак, все без ядерного оружия, потерпев огромные потери в ходе полной мясорубки, лишённые оружия, средств защиты. Предложить свои уcлуги по урегулированию конфликта. Поделить мир между китайцами, мусульманами и остальными. Убедить всех, что шаткий Мир можете сохранить только Вы.
