--- a/МИР.md
+++ b/МИР.md
@@ -1,3 +1,5 @@
-# **Как захватить мир!**
+# **Как захватить мир!**git
 
 Итак, все без ядерного оружия, потерпев огромные потери в ходе полной мясорубки, лишённые оружия, средств защиты. Предложить свои уcлуги по урегулированию конфликта. Поделить мир между китайцами, мусульманами и остальными. Убедить всех, что шаткий Мир можете сохранить только Вы.
+
+**КОНЕЦ!**
