--- a/МИР.md
+++ b/МИР.md
@@ -1,5 +1,28 @@
 # **Как захватить мир!**git
 
-Итак, все без ядерного оружия, потерпев огромные потери в ходе полной мясорубки, лишённые оружия, средств защиты. Предложить свои уcлуги по урегулированию конфликта. Поделить мир между китайцами, мусульманами и остальными. Убедить всех, что шаткий Мир можете сохранить только Вы.
+Итак, Вы — НИКТО. Вы — ХУЖЕ, чем НИКТО. Вы — это НИЧТО. Вам лет 20-40. Каждый день Вы приходите с работы, не приносящей денег, выпиваете бутылку пива. Дома вас никто не ждёт. Ваш попугай с вами не разговаривает, потому что вы постоянно забываете его кормить и разбрасываете по дому носки. Вам отключили электричество, воду, телефон, свет из окон за неуплату (хотя вы, конечно-же, давно за всё заплатили! А эти сволочи жыды идиоты тупицы падонки гады люди из ЖЭКа делают то, что им хочется). Что делать, чтобы прекратить такое существование? У Вас два выхода:
+
+Покончить с собой
+Стать главным в Мире. Именно по этому поводу и было написано данное руководство:
+
+Этап № 0
+
+Влюбиться в безумно известную актрису.
+Как это сделать — это Ваши проблемы…
+Получить от неё отказ.
+Это уже её проблемы…
+Разочароваться в жизни.
+Достаточно 3-х граммов амфетаминов (или морфия).
+Позвонить старому другу, пойти вместе в кабак.
+Напиться до поросячего визга.
+Вспомнить, что Вам уже за сорок.
+Понять, что в жизни ничего уже не светит.
+Подраться с барменом, который разбавляет пиво.
+Расцеловать шофера, который отвезёт Вас домой.
+Вспомнить, что сказала Вам актриса.
+Набить морду шоферу.
+Попасть в СИЗО на 15 суток.
+Встретить там высокообразованных людей.
+К концу срока понять, что пора брать всё в свои руки.
 
 **КОНЕЦ!**
